# mycalculator

./: README.md  pyproject.toml
src/: main.py
src/localisations/: translations.py
