[project]
name = "mycalculator"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "tct123", email = "you@example.com" }]
dependencies = ["flet>=0.80.5", "mylocale", "flet-localisation"]

[dependency-groups]
dev = ["flet-cli>=0.80.5", "flet-desktop>=0.80.5", "flet-web>=0.80.5"]

[tool.flet]
org = "de.cmg"
product = "MyCalculator"
company = "Creative Media Group"
copyright = "Copyright (C) 2023-2026 by Creative Media Group"

[tool.flet.app]
path = "src"

[tool.flet.android]
dependencies = ["pyjnius"]

[tool.flet.ios]
dependencies = ["pyobjus"]
